# SegMe

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/demo/deploy4/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/demo/deploy4/: MNNForwardType.java  MNNNetInstance.java  MNNNetNative.java  MainActivity.java  Utils.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/demo/deploy4/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
